--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--css-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SYNERGODE</title>
+	<title>SYNERGOed</title>
 </head>
 <body>
 	<header>
@@ -118,13 +118,13 @@
 	</section>
 	<!--pie de pagina-->
 	<footer>
-		<img class="wp"src="imagenes/whatl.png">
+		<img class="wp"src="whatl.png">
 		<br>
 
 		<a href="https://wa.me/+59172026914/?text=Gracias%20por%20comunicarte%20con%20SYNERGOED%20¿Cómo%20podemos%20ayudarte?%20">72026914</a>
 		<a href="https://wa.me/+59177775680/?text=Gracias%20por%20comunicarte%20con%20SYNERGOED%20¿Cómo%20podemos%20ayudarte?%20">77775680</a>
 		<br>
-        <a href="synergo.ed@outlook.com">synergo.ed@outlook.com</a> <br>
+        <p>synergo.ed@outlook.com</p> <br>
 
 	</footer>
 </body>
