--- a/contactos.html
+++ b/contactos.html
@@ -35,13 +35,13 @@
 
 	<!--pie de pagina-->
 	<footer>
-		<img class="wp"src="imagenes/whatl.png">
+		<img class="wp"src="whatl.png">
 		<br>
 
 		<a href="https://wa.me/+59172026914/?text=Gracias%20por%20comunicarte%20con%20SYNERGOED%20¿Cómo%20podemos%20ayudarte?%20">72026914</a>
 		<a href="https://wa.me/+59177775680/?text=Gracias%20por%20comunicarte%20con%20SYNERGOED%20¿Cómo%20podemos%20ayudarte?%20">77775680</a>
 		<br>
-        <a href="synergo.ed@outlook.com">synergo.ed@outlook.com</a> <br>
+        <p>synergo.ed@outlook.com</p> <br>
 
 	</footer>
 
